--- a/6_CSS/praktikum/style.css
+++ b/6_CSS/praktikum/style.css
@@ -1,17 +1,21 @@
 html {
     font-size: 10pt;
 
-    font-family: 'Source Sans Pro', 'Open Sans', Roboto, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', 'Myriad Pro', 'Segoe UI', Myriad, Helvetica, 'Lucida Grande', 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', Tahoma, Geneva, Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     -webkit-text-size-adjust: 100%;
   }
 
 nav {
   float: right;
+  
 }
 
-  nav img{
-      width: 100px;
-      height: 20px;
+img{
+      width: 150px;
+      height: 30px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-left: 10px;
   }
 
   body {
@@ -19,27 +23,35 @@ nav {
     background-image: url(sample-pattern.png);
   }
 
-  /*panjang halaman*/
   section {
-    height: 1100px;
+    height: 1000px;
   }
 
   h1{
       color: black;
       margin-left: 40%;
       margin-right: 40%;
-      font-size: ;
+      font-size: 35px ;
   }
 
   header {
-    
+  
     padding: 1.5em;
-    font-size: 140%;
-    padding: 0.25em 0;
-    margin-right: -55px;
-    background-color: white;
-    
+    font-size: 120%;
+    padding: 0.5em 0;
+    background-color: white; 
   }
+  
+  ul {
+    list-style-type: none;
+    margin-top: 15px;
+  }
+  
+  li {
+    float: left;
+    padding-inline: 1em;
+  }
+
   article h3{
       color:royalblue;
       font-family: 'Times New Roman', Times, serif;
@@ -50,11 +62,12 @@ nav {
     text-decoration: none;
     padding: 1em;
     color: royalblue;
-    transition: opacity .2s ease-in-out;
+    
 }
 
   article {
-    margin: 3.5em auto 0;
+    margin: 0.25em auto 0;
+    margin-bottom: 0;
     padding: 1em;
     font-size: 100%;
     max-width: 800px;
@@ -63,13 +76,9 @@ nav {
   }
 
   article p {
-    margin: 0;
+    
     color: #333;
     font-family: 'Times New Roman', Times, serif;
-  }
-
-  article p + p {
-    margin-top: .7em;
   }
 
   footer{
@@ -81,7 +90,8 @@ nav {
     font-family: "Fjalla One", Verdana, Geneva, sans-serif;
     font-size: 0.95em;
     text-transform: uppercase;
-
+    text-align: center;
+    color: #FFF;
 }
 
 h5{
@@ -91,17 +101,6 @@ h5{
 
 
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding-left: 1em;
-  overflow: hidden;
-
-}
-
-li {
-  float: left;
-}
 
 
 
